# webgpu-ray-tracing-compute

./: .gitmodules  CMakeLists.txt  README.md  app-backup.html  main.cpp
loader/: loader.cpp  loader.h
math/: CMakeLists.txt  mat4.cpp  mat4.h  quaternion.cpp  quaternion.h  vec.cpp  vec.h
render/: camera.cpp  camera.h  render_job.cpp  render_job.h  render_utils.h  renderer.cpp  renderer.h
render-jobs/: atmosphere-graphics.json  build-irradiance-cache-compute.json  composite-graphics.json  copy-render-targets.json  cross-section-cleanup-graphics.json  cross-section-graphics.json  debug-ambient-occlusion-graphics.json  debug-irradiance-cache-graphics.json  deferred-front-face.json  deferred-indirect.json  deferred.json  direct-radiance-graphics.json  external-data.json  final-composite-graphics.json  mesh-culling-compute.json  mesh-selection-graphics.json  outline-graphics.json  pbr-graphics.json  ray-tracing-composite-graphics.json  render-jobs.json  screen-space-visibility-ambient-occlusion-graphics.json  screen-space-visibility-bitmask-ambient-occlusion-graphics.json  spatial-restir-emissive-graphics.json  spherical-harmonics-diffuse-graphics.json  spherical-harmonics-direct-graphics.json  spherical-harmonics-emissive-graphics.json  svgf-diffuse-graphics-0.json  svgf-diffuse-graphics-1.json  svgf-diffuse-graphics-2.json  svgf-direct-graphics-0.json  svgf-direct-graphics-1.json  svgf-emissive-graphics-0.json  svgf-emissive-graphics-1.json  svgf-emissive-graphics-2.json  svgf-emissive-graphics-3.json  svgf-graphics-0.json  svgf-graphics-1.json  svgf-graphics-2.json  taa-graphics.json  temporal-restir-diffuse-graphics.json  (+1 more)
shaders/: atmosphere-graphics.shader  build-irradiance-cache-compute.shader  composite-graphics.shader  cross-section-cleanup-graphics.shader  cross-section-graphics.shader  debug-ambient-occlusion-graphics.shader  debug-irradiance-cache-graphics.shader  deferred.shader  direct-radiance-graphics.shader  down-rez-depth-graphics.shader  draw_text.shader  final-composite-graphics.shader  mesh-culling-compute.shader  mesh-culling-index-compute.shader  mesh-selection.shader  outline-graphics.shader  pbr-graphics.shader  ray-tracing-composite-graphics.shader  screen-space-visiblity-bitmask-ambient-occlusion-graphics.shader  spatial-restir-emissive-graphics.shader  spherical-harmonics-diffuse-graphics.shader  svgf-graphics-1.shader  svgf-graphics.shader  taa-graphics.shader  temporal-restir-diffuse-graphics.shader  temporal-restir-emissive-graphics.shader
tools/obj_2_binary/: CMakeLists.txt  obj_2_binary.cpp
utils/: LogPrint.cpp  LogPrint.h  blue_noise.cpp  blue_noise.h  halton.cpp  halton.h
